# supertuxkart-ice-hockey

./: .gitignore  Dockerfile  bash.sh  build.sh  pyproject.toml  record.sh  requirements.txt  sample_pkl_Image_vs_AI.txt  torch.sh
data/dumb_state_agent/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+931 more)
grader/: runner.py  tests.py
image_agent/: controller.py  dense_transform.py  detector.py  planner.py  player.py  train.py  train_detector.py  train_planner.py  utils.py
image_agent/2_class_data/: icy_soccer_field_00000.csv  icy_soccer_field_00001.csv  icy_soccer_field_00002.csv  icy_soccer_field_00003.csv  icy_soccer_field_00004.csv  icy_soccer_field_00006.csv  icy_soccer_field_00007.csv  icy_soccer_field_00009.csv  icy_soccer_field_00012.csv  icy_soccer_field_00014.csv  icy_soccer_field_00022.csv  icy_soccer_field_00024.csv  icy_soccer_field_00029.csv  icy_soccer_field_00030.csv  icy_soccer_field_00036.csv  icy_soccer_field_00037.csv  icy_soccer_field_00039.csv  icy_soccer_field_00041.csv  icy_soccer_field_00042.csv  icy_soccer_field_00043.csv  icy_soccer_field_00044.csv  icy_soccer_field_00046.csv  icy_soccer_field_00047.csv  icy_soccer_field_00048.csv  (+609 more)
state_agent/: player.py
tournament/: runner.py  utils.py
(+90 files in other folders)
